Completed random letter row and input and button row

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
                 <p class="flexLetters">{{ . }}</p>
             {{ /splitScramble }}
         </div>
+        <div class="row" id="row3">
+            <input type="text" placeholder="Guess...">
+            <button id="submit">Submit</button>            
+        </div>
+        <div class="row" id="row4">
+            <p id="survey">Survey says... {{  }}!</p>
+        </div>
     </script>
     <link rel="stylesheet" href="style.css">    
 </head>
