Began work on POST request and comparing it to real answer

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             {{ /splitScramble }}
         </div>
         <div class="row" id="row3">
-            <input type="text" placeholder="Guess...">
+            <input id="input" type="text" placeholder="Guess...">
             <button id="submit">Submit</button>            
         </div>
         <div class="row" id="row4">
